fix[Sidebar]: fixed sidebar scrollbar bug (#1853)

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -28,10 +28,6 @@
 
     .scrollbar-wrapper {
       overflow-x: hidden !important;
-
-      .el-scrollbar__view {
-        height: 100%;
-      }
     }
 
     .el-scrollbar__bar.is-vertical {
